--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/x-data-grid-generator": "^6.11.2",
     "@mui/x-date-pickers": "^6.11.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "aws-amplify": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
